# OpenSatKit

./: .gitignore  CONTRIBUTING.md  README.md  cfs_app_diagram.html  install.sh  redhat_install.sh  refactor-todo.txt
42/: .gitignore  42  AcApp  Makefile  Makefile~  fsw
42/.svn/: wc.db
42/Analysis/: Check3Body.m  Cholesky.m  Cost  DomForce.m  EarthMoon.m  EulHill.m  GyroModel.m  Influence.m  Interplay.m  KaneCheck.m  Plotlocus.gp  RelEnergy.m  RootLocus  ShellCheck.m  ShellOfInfluence.m  Spinner.m  TwoBodySim.m  flexRK4.m  flexmode.m  flexmode2.m  flexpredict.m  locus  poleplace.m
42/Database/: AcParmDump00.txt  AcParmDump01.txt
42/Demo/: Inp_FOV.txt  Inp_Graphics.txt  Inp_Sim.txt  SC_Aura.txt  SC_BBM.txt  SC_CMG.txt  SC_Cubesat1U.txt  SC_Cubesat3U.txt  SC_Cubesat6U.txt  SC_HST.txt  SC_ISS.txt  SC_IonCruiser.txt  SC_LRO.txt  SC_Moai.txt  SC_Orion.txt  SC_SensorFOV.txt  SC_Shuttle.txt  SC_Spinner.txt  SC_ThrDemo.txt  SC_Voyager.txt
42/Development/: .gdb_history  427-02-07_WRS2_Definition_07-01-04_REV_-.doc  CTRLKIT.FOR  Force Flow.graffle  Galactic Coordinate Frame.txt  Geewhiz Makefile  HeapSort.c  ORBKIT.FOR  PlotTwoImpulseI.m  Q2C.m  SelectMedian.c  TransJointSim.m  TwoImpulse.c  Wavefront OBJ File Description.txt
42/Docs/: 42 Description.txt  42 Flowchart.txt  Acknowledgments.rtf  Nomenclature.tex  Orbit Propagation.tex  Prototype.rtf  SatCam Description.txt  To-Do List.txt
42/IPPO Release Forms/: GLEE License.txt  GLUT License.txt
42/InOut/: AbsTime.42  CssAmps.42  Dyn00.42  F06To42Flex.m  Fsw.42  Hvn.42  Inp_Cmd.txt  Inp_FOV.txt  Inp_Graphics.txt  Inp_IPC.txt  Inp_Sim.txt  KE.42  PosN.42  PosW.42  ProjArea.42  RPY.42  SC_Dellingr1.txt  SC_Simple.txt  Twhlcmd.42  VelN.42  VelR.42  VelW.42  qbn.42  time.42  u00.42  wbn.42  x00.42
42/Include/: 42.h  42GlutGui.h  42defines.h  42fsw.h  42types.h  f42_comm.h  fswdefines.h  fswtypes.h
42/Model/: 1FGL Source Catalog.txt  42.mtl  ACE01.mtl  ARC_ChaserBody.mtl  ARC_ChaserSolarArray.mtl  ARC_Hand.mtl  ARC_Target.mtl  AntennaHalfMeter.wings  AntennaOneMeter.wings  Aura_MainBody.mtl  Aura_SolarArray.mtl  BBM.mtl  Dellingr.mtl  Dellingr.wings  Dragon_Bus.wings  Dragon_SolarArray.wings  EGM96.txt  Egret Source Catalog.txt  FGST-KuAntenna.mtl  FGST-MainBody.mtl  FGST-SolarArray.mtl  GLGM2.txt  GMM2B.txt  GPM.mtl  ISS.mtl  ISS_SimpleMainBody.mtl  Kepler.mtl  LDCM_MainBody.mtl  LDCM_SolarArray.mtl  LRO_HGA_Boom.mtl  LRO_HGA_Dish.mtl  LRO_HGA_Gimbal.mtl  LRO_Main_Body.mtl  LRO_SAS_Center_Panel.mtl  LRO_SAS_Gimbal.mtl  LRO_SAS_Right_Panel.mtl  LanderBody.mtl  MDLSat_Antenna.mtl  MDLSat_SolarArray.mtl  MinorBodies.txt  (+32 more)
42/OSK/: AbsTime.42  Dyn00.42  Hvn.42  Inp_Graphics.txt  Inp_IPC.txt  Inp_Sim-gui.txt  Inp_Sim-no_gui.txt  Inp_Sim.txt  KE.42  Orb_LEO.txt  PosN.42  PosR.42  PosW.42  RPY.42  SC_Aura.txt  Tree00.42  VelN.42  VelR.42  VelW.42  qbn.42  time.42  u00.42  wbn.42  x00.42
42/Potato/: Inp_Graphics.txt  SC_FiveBody.txt  SC_Potato1.txt  SC_Potato10.txt  SC_Potato12.txt  SC_Potato15.txt  SC_Potato18.txt  SC_Potato2.txt  SC_Potato20.txt  SC_Potato3.txt  SC_Potato4.txt  SC_Potato5.txt  SC_Potato6.txt  SC_Potato8.txt  SC_Simple.txt
42/Rx/: Inp_Graphics.txt  (+7 more)
cfs/: .cproject  .project  Makefile  cfe-OSS-readme.txt  cmake.sh  kill_cfs.sh  setvars.sh
cfs/apps/cf/: CMakeLists.txt  cfs-cf-app-OSS-readme.txt
cfs/apps/cf/docs/detailed_design/presentations/: CFS_CF_DesignReviewV2.1.ppt
cfs/apps/cf/docs/dox_src/detailed_design/: cfs_cf.dox
cfs/apps/cf/docs/dox_src/mnem_maps/: cfs_cf_cmd_mnem_map  cfs_cf_tlm_mnem_map
cfs/apps/cf/docs/dox_src/users_guide/: cfs_cf.dox
cfs/apps/cf/fsw/for_build/: Makefile  cftables.mak  user_doxy
cfs/apps/cf/fsw/platform_inc/: cf_platform_cfg.h
cfs/apps/cf/fsw/src/: cf_app.c  cf_app.h  cf_callbacks.c  cf_playback.c
cfs/apps/cf/fsw/src/PRI/: makefile
cfs/apps/cf/fsw/tables/: cf_cfgtable.c
cfs/apps/cf/fsw/unit_test/: cf_testcase.c  makefile
cfs/apps/cf/fsw/unit_test/ut-assert/doc/: Writing Better Unit Tests.ppt
cfs/apps/f42/: CMakeLists.txt
cfs/apps/f42/fsw/mission_inc/: f42_mission_cfg.h
cfs/apps/f42/fsw/platform_inc/: f42_msgids.h  f42_perfids.h  f42_platform_cfg.h
cfs/apps/f42/fsw/src/: 42fsw.h  CubeSatFsw.c  CubeSatFsw.h  ThreeAxisFsw.c  ThreeAxisFsw.h  app_cfg.h  ctrltbl.c  ctrltbl.h  f42_adp.c  f42_adp.h  f42_app.c  f42_app.h  fswkit.c  fswkit.h  fswtypes.h  iokit.h  mathkit.c  mathkit.h
cfs/apps/i42/: CMakeLists.txt
cfs/apps/i42/fsw/mission_inc/: i42_mission_cfg.h
cfs/apps/i42/fsw/platform_inc/: i42_msgids.h  i42_perfids.h  i42_platform_cfg.h
cfs/apps/i42/fsw/src/: app_cfg.h  i42_app.c  i42_app.h  if42.c  if42.h  netif.c  netif.h
cfs/apps/kit_to/: CMakeLists.txt
cfs/apps/kit_to/fsw/mission_inc/: kit_to_mission_cfg.h
cfs/apps/kit_to/fsw/platform_inc/: kit_to_msgids.h  kit_to_perfids.h  kit_to_platform_cfg.h
cfs/apps/kit_to/fsw/src/: app_cfg.h  evt_plbk.c  evt_plbk.h  kit_to_app.c  kit_to_app.h  pktmgr.c  pktmgr.h  pkttbl.c  pkttbl.h
cfs/apps/kit_to/fsw/tables/: kit_to_pkttbl.xml
cfs/apps/osk_42_lib/: CMakeLists.txt
cfs/apps/osk_42_lib/fsw/app_inc/: ac42.h  iokit.h  osk_42_lib.h
cfs/apps/osk_42_lib/fsw/src/: AcApp.c  AcParmDump00.txt  AppReadFromSocket.c  ac42.c  osk_42_lib_init.c  osk_42_lib_ver.h
cfs/apps/sbn/modules/dtn/: CMakeLists.txt  README.txt  app.cfg
cfs/apps/sbn/modules/dtn/fsw/for_build/: Makefile
cfs/apps/sbn/modules/dtn/fsw/src/: sbn_dtn_events.h  sbn_dtn_if.c  sbn_dtn_if.h  sbn_dtn_if_struct.h
cfs/tools/tblCRCTool/: CMakeLists.txt  Makefile  README.md  SECURITY.md  cfe_ts_crc.c  cfe_ts_crc_version.h
cfs/tools/tblCRCTool/.github/workflows/: codeql-build.yml  format-check.yml
cosmos/: .gitignore  Gemfile  Launcher  Launcher.bat  README.md  Rakefile  aa_put_file_test.txt  appgen-properties.xml  cf_aa_test.txt  cf_put_test.txt  genapp-properties.xml  sample_upload.proc  test-out.json
docs/: desktop.ini  osk_app_def.json
(+5529 files in other folders)
